--- a/views/checkout.html
+++ b/views/checkout.html
@@ -20,24 +20,37 @@
 						<div id="customer_details" class="col2-set">
 							<div class="row">
 								<div class="col-md-12">
-									{if="$error!=''"}
+
+									{if="$error != ''"}
 									<div class="alert alert-danger">
-									{$error}
+										{$error}
 									</div>
 									{/if}
+
 									<div class="woocommerce-billing-fields">
 										<h3>Endereço de entrega</h3>
 										<p id="billing_address_1_field" class="form-row form-row-wide address-field validate-required">
-											<label class="" for="billing_address_1">Cep <abbr title="required" class="required">*</abbr>
+											<label class="" for="billing_cep_1">Cep <abbr title="required" class="required">*</abbr>
 											</label>
-                                            <input type="text" value="{$cart.deszipcode}" placeholder="00000-000" id="billing_address_1" name="zipcode" class="input-text ">
-                                            <input type="submit" value="Atualizar CEP" id="place_order" class="button alt" formaction="/checkout" formmethod="get">
+											<input type="text" value="{$cart.deszipcode}" placeholder="00000-000" id="billing_cep_1" name="zipcode" class="input-text ">
+											<input type="submit" value="Atualizar CEP" id="place_order" class="button alt" formaction="/checkout" formmethod="get">
 										</p>
-										<p id="billing_address_1_field" class="form-row form-row-wide address-field validate-required">
-											<label class="" for="billing_address_1">Endereço <abbr title="required" class="required">*</abbr>
-											</label>
-											<input type="text" value="{$address.desaddress}" placeholder="Logradouro, número e bairro" id="billing_address_1" name="desaddress" class="input-text ">
-										</p>
+										<div class="row">
+											<div class="col-sm-9">
+												<p id="billing_address_1_field" class="form-row form-row-wide address-field validate-required">
+													<label class="" for="billing_address_1">Endereço <abbr title="required" class="required">*</abbr>
+													</label>
+													<input type="text" value="{$address.desaddress}" placeholder="Logradouro, número e bairro" id="billing_address_1" name="desaddress" class="input-text ">
+												</p>
+											</div>
+											<div class="col-sm-3">
+												<p id="billing_number_1_field" class="form-row form-row-wide number-field validate-required">
+													<label class="" for="billing_number_1">Número <abbr title="required" class="required">*</abbr>
+													</label>
+													<input type="text" value="{$address.desnumber}" placeholder="Número" id="billing_address_1" name="desnumber" class="input-text ">
+												</p>
+											</div>
+										</div>
 										<p id="billing_address_2_field" class="form-row form-row-wide address-field">
 											<input type="text" value="{$address.descomplement}" placeholder="Complemento (opcional)" id="billing_address_2" name="descomplement" class="input-text ">
                                         </p>
@@ -68,7 +81,7 @@
 														<th class="product-name">Produto</th>
 														<th class="product-total">Total</th>
 													</tr>
-												</thead>												
+												</thead>
 												<tbody>
                                                     {loop="$products"}
 													<tr class="cart_item">
@@ -100,6 +113,17 @@
 													</tr>
 												</tfoot>
 											</table>
+
+											<p id="billing_state_field" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
+												<input type="radio" id="method-pagseguro" name="payment-method" value="1" style="float: left; margin: 30px;">
+												<label for="method-pagseguro"><img style="height: 64px" src="/res/site/img/logo-pagseguro.png"></label>
+											</p>
+
+											<p id="billing_state_field" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
+												<input type="radio" id="method-paypal" name="payment-method" value="2" style="float: left; margin: 30px;" checked>
+												<label for="method-paypal"><img style="height: 64px" src="/res/site/img/logo-paypal.png"></label>
+											</p>
+
 											<div id="payment">
 												<div class="form-row place-order">
 													<input type="submit" data-value="Place order" value="Continuar" id="place_order" name="woocommerce_checkout_place_order" class="button alt">
